--- a/homework7/Base.lproj/Main.storyboard
+++ b/homework7/Base.lproj/Main.storyboard
@@ -26,13 +26,13 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Shopping Tasks"/>
                                 <connections>
-                                    <segue destination="kq0-dx-ruf" kind="show" id="hdp-YP-hU0"/>
+                                    <segue destination="zeG-tm-GMY" kind="show" id="p0v-AD-PX0"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A3u-Ma-cSo">
-                                <rect key="frame" x="139" y="259" width="96" height="30"/>
+                                <rect key="frame" x="145" y="259" width="84" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="&quot;To Do Tasks&quot;"/>
+                                <state key="normal" title="To Do Tasks"/>
                                 <connections>
                                     <segue destination="Ht0-Ej-0MO" kind="show" id="tjB-ac-P24"/>
                                 </connections>
@@ -63,11 +63,11 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="gEr-Rz-hnK" customClass="TodoTableViewCell" customModule="homework7" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ToDoTableViewIdentifier" id="gEr-Rz-hnK" customClass="TodoTableViewCell" customModule="homework7" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="343" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gEr-Rz-hnK" id="Csq-CR-mIP">
-                                            <rect key="frame" x="0.0" y="0.0" width="343" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dZN-G6-y9w">
@@ -101,46 +101,58 @@
             <point key="canvasLocation" x="-1167.2" y="2283.5082458770617"/>
         </scene>
         <!--Shopping View Controller-->
-        <scene sceneID="Jhh-5J-2vH">
+        <scene sceneID="Gkg-kt-PWT">
             <objects>
-                <viewController id="kq0-dx-ruf" customClass="ShoppingViewController" customModule="homework7" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="zeG-tm-GMY" customClass="ShoppingViewController" customModule="homework7" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Z5C-08-YmC"/>
-                        <viewControllerLayoutGuide type="bottom" id="5PY-2u-ZQA"/>
+                        <viewControllerLayoutGuide type="top" id="fdR-9n-0EW"/>
+                        <viewControllerLayoutGuide type="bottom" id="hSM-uY-pqJ"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="6ji-mF-5ps">
+                    <view key="view" contentMode="scaleToFill" id="nfE-Xm-JSs">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uD6-8B-bmZ">
-                                <rect key="frame" x="16" y="72" width="343" height="363"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6ae-k4-QW0">
+                                <rect key="frame" x="16" y="72" width="343" height="499"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="5zR-vH-hUv" customClass="ShoppingTableViewCell" customModule="homework7" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ShoppingTableViewIdentifier" id="Ukj-Mr-QUx" customClass="ShoppingTableViewCell" customModule="homework7" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="343" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5zR-vH-hUv" id="992-Ps-GS7">
-                                            <rect key="frame" x="0.0" y="0.0" width="343" height="43"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ukj-Mr-QUx" id="rUb-Cr-UoJ">
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hY6-Hn-KWn">
+                                                    <rect key="frame" x="8" y="8" width="234" height="27"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="shoppingTaskLabel" destination="hY6-Hn-KWn" id="DkZ-Ty-7oT"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
-                                    <outlet property="dataSource" destination="kq0-dx-ruf" id="wu3-j6-w5v"/>
-                                    <outlet property="delegate" destination="kq0-dx-ruf" id="VS7-se-nYZ"/>
+                                    <outlet property="dataSource" destination="zeG-tm-GMY" id="0Zd-Lc-0Rr"/>
+                                    <outlet property="delegate" destination="zeG-tm-GMY" id="Ref-b0-XZ4"/>
                                 </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
-                        <outlet property="shoppingTableView" destination="uD6-8B-bmZ" id="yHq-vJ-OSX"/>
+                        <outlet property="shoppingTableView" destination="6ae-k4-QW0" id="ojH-52-lml"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="wUb-rz-vCn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dO3-Qm-O2O" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="288.80000000000001" y="2284.4077961019493"/>
+            <point key="canvasLocation" x="370.39999999999998" y="2298.8005997001501"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="MCC-KF-ad0">
